// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Component Snapshot test should render correctly regardless of properties 1`] = `
<div
  className="flex justify-center items-center mx-auto w-1/3 min-h-screen text-center bg-white"
>
  <div
    className="bg-white rounded-lg shadow-2xl"
  >
    <div
      className="flex w-96 rounded-lg border-t-8 border-green-600"
    >
      <div
        className="p-10 mx-auto mt-10 w-full"
      >
        <h1
          className="text-gray-800 h1"
        >
          Hello world
        </h1>
      </div>
    </div>
    <div
      className="flex py-10 px-10 space-x-4"
    >
      <a
        className="flex rounded-md shadow btn btn-green"
        href="/"
        onClick={[Function]}
      >
        Potato
      </a>
    </div>
  </div>
</div>
`;

exports[`Confirmation Component Snapshot test should render correctly regardless of properties 2`] = `
<div
  className="flex justify-center items-center mx-auto w-1/3 min-h-screen text-center bg-white"
>
  <div
    className="bg-white rounded-lg shadow-2xl"
  >
    <div
      className="flex w-96 rounded-lg border-t-8 border-green-600"
    >
      <div
        className="p-10 mx-auto mt-10 w-full"
      >
        <h1
          className="text-gray-800 h1"
        >
          Apples
        </h1>
      </div>
    </div>
    <div
      className="flex py-10 px-10 space-x-4"
    >
      <a
        className="flex rounded-md shadow btn btn-green"
        href="/login"
        onClick={[Function]}
      >
        
      </a>
    </div>
  </div>
</div>
`;
